# HazelT

./: .gitignore  .gitmodules  CMakeLists.txt  CPU_SHADER_CONTROL_README.md  EarlyZ_README.md  IMPLEMENTATION_DOCS.md  README.md  lwrp.rng  validate_implementation.sh
Hazel/: CMakeLists.txt
Hazel/src/: Hazel.h  Hazel_noEntityPoint.h  hzpch.cpp  hzpch.h
Hazel/src/Hazel/: Application.cpp  Applicaton.h  Core.h  EntityPoint.h  Log.cpp  Log.h
Hazel/src/Hazel/Core/: Application.cpp  Application.h  Applicaton.h  Base.h  Core.h  EntityPoint.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Timestep.h  Window.cpp  Window.h
Hazel/src/Hazel/Debug/: Instrumentor.h
Hazel/src/Hazel/Events/: ApplicationEvent.cpp  ApplicationEvent.h  Event.cpp  Event.h  KeyCode.h  KeyEvent.cpp  KeyEvent.h  MouseEvent.cpp  MouseEvent.h  OrthographicCameraController.cpp  OrthographicCameraController.h
Hazel/src/Hazel/Renderer/: Buffer.cpp  Buffer.h  Camera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  RenderGraph.cpp  RenderGraph.h  RenderNodeDefaultDepthRenderSlot.cpp  RenderNodeDefaultDepthRenderSlot.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  SubTexture2D.cpp  SubTexture2D.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
Hazel/src/Hazel/Scene/: Component.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneCameraController.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h  ScriptableEntity.h
Hazel/src/Hazel/imGui/: ImGuiLayer.cpp  ImGuiLayer.h
Hazel/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRenererAPI.cpp  OpenGLRenererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  Renderer_OpenGLRenererAPI.cpp  Renderer_OpenGLRenererAPI.h
Hazel/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Hazel/src/Rendrer/: Renderer.h  RendererAPI.cpp  VertexArray.cpp  VertexArray.h
Hazel/src/Rendrer/OpenGL/: Renderer_OpenGLRenererAPI.h
Hazelnut/: CMakeLists.txt  imgui.ini
Hazelnut/assets/shaders/: FlatColor.glsl  Texture.glsl  squareshader.glsl
Hazelnut/src/: EditorLayer.cpp  EditorLayer.h  HazelnutApp.cpp
SandBox/: CMakeLists.txt  imgui.ini
SandBox/assets/shaders/: Core3D_DM_FW.glsl  GltfView.glsl  Texture.glsl  core3d_dm_fw.frag  core3d_dw_fm.frag  squareshader.glsl  triangleshader.glsl
SandBox/src/: Core3DLayer.cpp  Core3DLayer.h  ExampleLayer.cpp  ExampleLayer.h  GameLayer.cpp  GameLayer.h  GltfViewApp.h  Level.cpp  Level.h  ParticleSystem.cpp  ParticleSystem.h  Player.cpp  Player.h  Random.cpp  Random.h  SandBox2D.cpp  SandBox2D.h  SandBoxApp.cpp  gltf_view_app.cpp
build_test/: CMakeCache.txt
docs/: example_highp_shader.glsl  example_lowp_shader.glsl  shader_precision_guide.md
examples/: hardcoded_shader_example.frag
